--- a/package.json
+++ b/package.json
@@ -39,12 +39,18 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.13.2",
-    "axios": "^1.10.0"
+    "@commitlint/cli": "19.8.1",
+    "@commitlint/config-conventional": "19.8.1",
+    "@modelcontextprotocol/sdk": "1.13.2",
+    "axios": "1.10.0",
+    "eslint": "9.32.0",
+    "eslint-plugin-prettier": "5.5.3",
+    "lint-staged": "16.1.2",
+    "neostandard": "0.12.2"
   },
   "devDependencies": {
-    "@types/node": "^24.0.6",
-    "typescript": "^5.8.3"
+    "@types/node": "24.0.6",
+    "typescript": "5.8.3"
   },
   "engines": {
     "node": ">=18"
