--- a/package.json
+++ b/package.json
@@ -39,26 +39,27 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "start": "node dist/index.js",
-    "typecheck": "bunx tsc --noEmit",
-    "postinstall": "npm run build",
+    "typecheck": "nlx tsc --noEmit",
+    "postinstall": "nr build",
     "prepare": "husky",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "nr build"
   },
   "dependencies": {
+    "@antfu/ni": "25.0.0",
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
-    "@modelcontextprotocol/sdk": "1.17.1",
+    "@modelcontextprotocol/sdk": "1.17.2",
     "axios": "1.11.0",
     "eslint": "9.32.0",
-    "eslint-plugin-prettier": "5.5.3",
-    "husky": "^9.1.7",
+    "eslint-plugin-prettier": "5.5.4",
+    "husky": "9.1.7",
     "jiti": "2.5.1",
-    "lint-staged": "16.1.2",
+    "lint-staged": "16.1.4",
     "neostandard": "0.12.2"
   },
   "devDependencies": {
-    "@types/node": "24.1.0",
-    "typescript": "5.8.3"
+    "@types/node": "24.2.0",
+    "typescript": "5.9.2"
   },
   "engines": {
     "node": ">=18"
