--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "apple-doc-mcp",
-  "version": "1.5.0",
+  "name": "apple-doc-mcp-server",
+  "version": "1.5.1",
   "description": "MCP server providing seamless access to Apple Developer Documentation with smart search and wildcard support",
   "main": "dist/index.js",
   "type": "module",
   "bin": {
-    "apple-doc-mcp": "dist/index.js"
+    "apple-doc-mcp-server": "dist/index.js"
   },
   "files": [
     "dist/",
     "README.md",
     "LICENSE",
-    "package.json",
     ".xo-config.js",
-    "technologies.json",
-    "mcp-config-example.json"
+    "docs/technologies.json"
   ],
   "keywords": [
     "mcp",
