--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
     "build": "tsc && chmod +x dist/index.js",
     "lint": "tsc --noEmit && xo src",
     "lint:fix": "tsc --noEmit && xo src --fix",
-    "start": "node dist/index.js",
-    "postinstall": "npm run build",
-    "prepublishOnly": "npm run build"
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.18.2",
